--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   unit-tests:
-    runs-on: [ "self-hosted", "hostname:kaito-e2e-github-runner" ]
+    runs-on: ubuntu-latest
     environment: unit-tests
     steps:
       - name: Harden Runner
@@ -58,9 +58,6 @@ jobs:
       - name: Upload Codecov report
         uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574 # v5.4.0
         with:
-          ## Comma-separated list of files to upload
-          fail_ci_if_error: true
           verbose: true
           files: ./coverage.txt
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
