--- a/docker/presets/models/llama-2/Dockerfile
+++ b/docker/presets/models/llama-2/Dockerfile
@@ -9,8 +9,8 @@ WORKDIR /workspace
 
 # Install git
 RUN apt-get update && \
+    apt-get upgrade -y && \
     apt-get install -y git && \
-    apt-get upgrade -y perl && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
