--- a/docker/ragengine/service/Dockerfile
+++ b/docker/ragengine/service/Dockerfile
@@ -1,13 +1,12 @@
 FROM python:3.12-slim
 
 # Install system dependencies for building Python packages
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     build-essential \
     gcc \
     g++ \
     make \
     perl \
-    && apt-get upgrade -y perl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
