--- a/docker/presets/models/llama-2/Dockerfile
+++ b/docker/presets/models/llama-2/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /workspace
 # Install git
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y git && \
+    apt-get install -y --no-install-recommends git && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
