--- a/docker/ragengine/service/Dockerfile
+++ b/docker/ragengine/service/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.12-slim
 
 # Install system dependencies for building Python packages
-RUN apt-get update && apt-get upgrade -y && apt-get install -y \
+RUN apt-get update && apt-get upgrade -y \
+    && apt-get install -y --no-install-recommends  \
     build-essential \
     gcc \
     g++ \
