--- a/examples/fine-tuning/kaito_workspace_tuning_falcon_7b_oai.yaml
+++ b/examples/fine-tuning/kaito_workspace_tuning_falcon_7b_oai.yaml
@@ -14,7 +14,7 @@ tuning:
     presetOptions:
       image: aimodelsregistrytest.azurecr.io/kaito-falcon-7b:0.0.4
   method: qlora
-  config: qlora-params-template  # Your configMap containing tuning arguments
+  config: my-qlora-params # Your configMap containing tuning arguments
   input:
     urls:
       - "https://huggingface.co/datasets/philschmid/dolly-15k-oai-style/resolve/main/data/train-00000-of-00001-54e3756291ca09c6.parquet?download=true"
