--- a/examples/fine-tuning/kaito_workspace_tuning_falcon_7b_mental.yaml
+++ b/examples/fine-tuning/kaito_workspace_tuning_falcon_7b_mental.yaml
@@ -1,4 +1,4 @@
-apiVersion: kaito.sh/v1alpha1
+apiVersion: kaito.sh/v1beta1
 kind: Workspace
 metadata:
   name: workspace-tuning-falcon-7b-dolly-oai
