--- a/presets/ragengine/requirements.txt
+++ b/presets/ragengine/requirements.txt
@@ -7,12 +7,12 @@ llama-index-embeddings-huggingface-api
 llama-index-llms-huggingface
 llama-index-llms-huggingface-api
 
-fastapi
-faiss-cpu
+fastapi>=0.100.0
+faiss-cpu>=1.7.4
 llama-index-vector-stores-faiss
 llama-index-vector-stores-chroma
 llama-index-vector-stores-azurecosmosmongo
-uvicorn
+uvicorn>=0.22.0
 asyncio
 aiorwlock
 httpx==0.27.0
@@ -20,3 +20,7 @@ httpx==0.27.0
 tree-sitter
 tree_sitter_languages
 tree-sitter-language-pack
+# Metrics collection
+prometheus-client>=0.17.0
+
+sentence-transformers
