--- a/presets/ragengine/requirements.txt
+++ b/presets/ragengine/requirements.txt
@@ -7,12 +7,12 @@ llama-index-embeddings-huggingface-api
 llama-index-llms-huggingface
 llama-index-llms-huggingface-api
 
-fastapi>=0.100.0
-faiss-cpu>=1.7.4
+fastapi
+faiss-cpu
 llama-index-vector-stores-faiss
 llama-index-vector-stores-chroma
 llama-index-vector-stores-azurecosmosmongo
-uvicorn>=0.22.0
+uvicorn
 asyncio
 aiorwlock
 httpx==0.27.0
