--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,7 +1,15 @@
 name: Create release
 on:
-  repository_dispatch:
-    types: [ create-release ]
+  workflow_dispatch:
+    inputs:
+      release_version:
+        description: 'Release version (e.g., v0.2.2)'
+        required: true
+        type: string
+      release_branch:
+        description: 'Release branch (e.g., official/v0.2.2)'
+        required: true
+        type: string
 
 permissions:
   id-token: write
@@ -27,17 +35,29 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION  }}
 
-      - name: Checkout the repository at the given SHA from the artifact
+      - name: Checkout the repository at the release branch
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           submodules: true
           fetch-depth: 0
-          ref: ${{ github.event.client_payload.tag }}
+          ref: ${{ github.event.inputs.release_branch }}
+
+      - name: Validate inputs
+        run: |
+          echo "Creating release ${{ github.event.inputs.release_version }} from branch ${{ github.event.inputs.release_branch }}"
+          if [[ ! "${{ github.event.inputs.release_version }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Release version must follow format vX.Y.Z"
+            exit 1
+          fi
+          if [[ ! "${{ github.event.inputs.release_branch }}" =~ ^official/ ]]; then
+            echo "Error: Release branch must start with 'official/'"
+            exit 1
+          fi
 
       - name: Check if release already exists
         id: check-release
         run: |
-          TAG="${{ github.event.client_payload.tag }}"
+          TAG="${{ github.event.inputs.release_version }}"
           if gh release view "$TAG" >/dev/null 2>&1; then
             echo "exists=true" >> $GITHUB_OUTPUT
             echo "Release $TAG already exists, skipping creation"
@@ -56,9 +76,9 @@ jobs:
           args: release --clean --timeout 60m --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GORELEASER_CURRENT_TAG: ${{ github.event.client_payload.tag }}
+          GORELEASER_CURRENT_TAG: ${{ github.event.inputs.release_version }}
 
       - name: Release already exists
         if: steps.check-release.outputs.exists == 'true'
         run: |
-          echo "Release ${{ github.event.client_payload.tag }} already exists. This is expected if multiple components are being published."
+          echo "Release ${{ github.event.inputs.release_version }} already exists."
