--- a/charts/kaito/ragengine/values.yaml
+++ b/charts/kaito/ragengine/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 image:
   repository: mcr.microsoft.com/aks/kaito/ragengine
   pullPolicy: IfNotPresent
-  tag: 0.0.1
+  tag: 0.5.0
 imagePullSecrets: []
 podAnnotations: {}
 podSecurityContext:
@@ -31,4 +31,4 @@ affinity: {}
 cloudProviderName: "azure"
 presetRagRegistryName: "mcr.microsoft.com/aks/kaito"
 presetRagImageName: "kaito-rag-service"
-presetRagImageTag: "0.5.0"
+presetRagImageTag: 0.5.0
